solved minor bugs + updated data

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -792,7 +792,7 @@
   __markedentry = {[Vincent:]},
   file          = {:Community Detection in Signed Networks- an Error-Correcting Code Approach.pdf:PDF},
   groups        = {Graph Partitioning, Not Found},
-  journaltitle  = {arXiv},
+  journal  = {arXiv},
   owner         = {Vincent},
   timestamp     = {2017.05.12},
   url           = {https://arxiv.org/abs/1705.04254},
@@ -1157,6 +1157,17 @@
   groups    = {Just balance, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.15},
+}
+
+@InProceedings{Dhillon2005,
+  author    = {Dhillon, I. and Guan, Y. and Kulis, B.},
+  title     = {A fast kernel-based multilevel algorithm for graph clustering},
+  booktitle = {11th ACM/SIGKDD International Conference on Knowledge Discovery in Data Mining},
+  year      = {2005},
+  doi       = {10.1145/1081870.1081948},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @Article{Doreian1996,
@@ -1530,6 +1541,20 @@
   timestamp = {2017.06.23},
 }
 
+@Article{Friedkin1991,
+  author    = {Friedkin, N. E.},
+  title     = {Theoretical Foundations for Centrality Measures},
+  journal   = {American Journal of Sociology},
+  year      = {1991},
+  volume    = {96},
+  number    = {6},
+  pages     = {1478-1504},
+  doi       = {10.1086/229694},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @InProceedings{Gael2007,
   author        = {van Gael, J. and Zhu, X.},
   title         = {Correlation clustering for crosslingual link detection},
@@ -1669,6 +1694,7 @@
   __markedentry = {[Vincent:]},
   doi           = {10.1016/j.laa.2010.10.026},
   file          = {:On products and line graphs of signed graphs, their eigenvalues and energy.pdf:PDF},
+  groups        = {Others, Ignored},
   owner         = {Vincent},
   timestamp     = {2017.06.26},
 }
@@ -1854,11 +1880,23 @@
   __markedentry = {[Vincent:]},
   file          = {:Recent Trends in Correlation Clustering.pdf:PDF},
   groups        = {Graph Partitioning, _To do},
-  issue         = {2},
-  journaltitle  = {International Journal for Women Researchers in Engineering, Science \& Management},
+  number        = {2},
+  journal  = {International Journal for Women Researchers in Engineering, Science \& Management},
   owner         = {Vincent},
   timestamp     = {2017.06.07},
   url           = {http://www.ijwresm.org/admin/images/Volume%201,%20Issue%201/201735.pdf},
+}
+
+@Book{Hage1983,
+  title     = {Structural Models in Anthropology},
+  publisher = {Cambridge University Press},
+  year      = {1983},
+  author    = {Hage, P. and Harary, F.},
+  file      = {:Structural Models in Anthropology.pdf:PDF},
+  groups    = {_General Properties, _Misc. Signed, Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.05.31},
+  url       = {http://www.cambridge.org/catalogue/catalogue.asp?isbn=0521273110},
 }
 
 @InCollection{Hage1983a,
@@ -1970,7 +2008,7 @@
   pages     = {682-687},
   doi       = {10.1090/S0002-9939-1966-0191845-4},
   file      = {:Enumeration of mixed graphs.pdf:PDF},
-  groups    = {Others},
+  groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.26},
 }
@@ -2147,6 +2185,7 @@
   __markedentry = {[Vincent:]},
   doi           = {10.1080/0308108031000053611},
   file          = {:On the Laplacian eigenvalues of signed graphs.pdf:PDF},
+  groups        = {Others},
   owner         = {Vincent},
   timestamp     = {2017.06.26},
 }
@@ -2282,6 +2321,19 @@
   file          = {:Monotonicity, frustration, and ordered response- an analysis of the energy landscape of perturbed largescale biological networks.pdf:PDF},
   owner         = {Vincent},
   timestamp     = {2017.06.08},
+}
+
+@InProceedings{Iakovidou2010,
+  author        = {Iakovidou, N. and Symeonidis, P. and Manolopoulos, Y.},
+  title         = {Multiway spectral clustering link prediction in protein-protein interaction networks},
+  booktitle     = {10th IEEE International Conference on Information Technology and Applications in Biomedicine},
+  year          = {2010},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1109/ITAB.2010.5687767},
+  file          = {:Multiway spectral clustering link prediction in protein-protein interaction networks.pdf:PDF},
+  groups        = {Graph Partitioning, Ignored},
+  owner         = {Vincent},
+  timestamp     = {2017.06.28},
 }
 
 @InProceedings{Ilev2016,
@@ -2520,7 +2572,7 @@
   number       = {4},
   file         = {:Uncloaking Terrorist Networks.pdf:PDF},
   groups       = {Datasets, Ignored},
-  journaltitle = {First Monday,},
+  journal = {First Monday,},
   owner        = {Vincent},
   timestamp    = {2017.04.19},
   url          = {http://pear.accc.uic.edu/ojs/index.php/fm/article/view/941/863},
@@ -2647,6 +2699,21 @@
   owner     = {Vincent},
   timestamp = {2015.09.18},
   url       = {http://arxiv.org/abs/1402.6865},
+}
+
+@Article{Lancichinetti2011,
+  author    = {Lancichinetti, A. and Fortunato, S.},
+  title     = {Limits of modularity maximization in community detection},
+  journal   = {Physical Review E},
+  year      = {2011},
+  volume    = {84},
+  number    = {6},
+  pages     = {066122},
+  doi       = {10.1103/PhysRevE.84.066122},
+  file      = {:Limits of modularity maximization in community detection.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2011.07.12},
 }
 
 @Article{Lange2015,
@@ -2815,6 +2882,7 @@
   pages         = {345-359},
   __markedentry = {[Vincent:]},
   file          = {:An upper bound on the Laplacian spectral radius of the signed graphs.pdf:PDF},
+  groups        = {Others, Ignored},
   owner         = {Vincent},
   timestamp     = {2017.06.26},
   url           = {https://pdfs.semanticscholar.org/bd8e/44f1972e59c30dce2117466ea16fdafe2170.pdf},
@@ -2829,6 +2897,7 @@
   pages         = {153-162},
   __markedentry = {[Vincent:]},
   file          = {:Note on the normalized Laplacian eigenvalues of signed graphs.pdf:PDF},
+  groups        = {Others, Ignored},
   owner         = {Vincent},
   timestamp     = {2017.06.26},
   url           = {https://pdfs.semanticscholar.org/2aea/e01267a70213ae313a85fe65babafad27e4f.pdf},
@@ -2967,6 +3036,20 @@
   timestamp = {2017.04.17},
 }
 
+@Article{Liu2009,
+  author    = {Liu, H. and Lin, Y. and Han, J.},
+  title     = {Methods for mining frequent items in data streams: an overview},
+  journal   = {Knowledge and Information Systems},
+  year      = {2009},
+  volume    = {26},
+  number    = {1},
+  pages     = {1-30},
+  doi       = {10.1007/s10115-009-0267-2},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @InProceedings{Liu2010i,
   author    = {Liu, J. and Zhong, W. and Abbass, H. A. and Green, D. G.},
   title     = {Separated and overlaping community detection in complex networks using multiobjectiive evolutionary algorithms},
@@ -2993,6 +3076,18 @@
   groups    = {Found},
   owner     = {Vincent},
   timestamp = {2014.03.11},
+}
+
+@InCollection{Lo2008,
+  author    = {Lo, D. and Khoo, S.-C. and Liu, C.},
+  title     = {Efficient Mining of Recurrent Rules from a Sequence Database},
+  booktitle = {International Conference on Database Systems for Advanced Applications},
+  year      = {2008},
+  pages     = {67-83},
+  doi       = {10.1007/978-3-540-78568-2_8},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @InProceedings{Lo2011,
@@ -3284,6 +3379,21 @@
   groups    = {Datasets, Ignored},
   owner     = {Vincent},
   timestamp = {2017.05.09},
+}
+
+@Article{Massa2008,
+  author    = {Massa, P. and Souren, K. and Salvetti, M. and Tomasoni, D.},
+  title     = {Trustlet, Open Research on Trust Metrics},
+  journal   = {Scalable Computing: Practice and Experience},
+  year      = {2008},
+  volume    = {9},
+  number    = {4},
+  pages     = {341-351},
+  file      = {:Trustlet, Open Research on Trust Metrics.pdf:PDF},
+  groups    = {Datasets, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+  url       = {https://www.scpe.org/index.php/scpe/article/view/554},
 }
 
 @Article{Mennes2013,
@@ -3631,8 +3741,8 @@
   doi           = {10.3934/jimo.2007.3.619},
   file          = {:A new multimembership clustering method.pdf:PDF},
   groups        = {Graph Partitioning, Ignored},
-  issue         = {4},
-  journaltitle  = {Journal of Industrial and Management Optimization},
+  number        = {4},
+  journal  = {Journal of Industrial and Management Optimization},
   owner         = {Vincent},
   timestamp     = {2017.06.06},
 }
@@ -3815,6 +3925,7 @@
   pages         = {1103.4629},
   __markedentry = {[Vincent:]},
   file          = {:New bounds for the Laplacian spectral radius of a signed graph.pdf:PDF},
+  groups        = {Others, Ignored},
   owner         = {Vincent},
   timestamp     = {2017.06.26},
   url           = {https://arxiv.org/abs/1103.4629},
@@ -3895,6 +4006,20 @@
   groups        = {Just balance, Ignored},
   owner         = {Vincent},
   timestamp     = {2017.06.08},
+}
+
+@Article{Robins2008,
+  author    = {Robins, G. and Kashima, Y.},
+  title     = {Social psychology and social networks: Individuals and social systems},
+  journal   = {Asian Journal Of Social Psychology},
+  year      = {2008},
+  volume    = {11},
+  number    = {1},
+  pages     = {1-12},
+  doi       = {10.1111/j.1467-839x.2007.00240.x},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @Book{Roethlisberger1939,
@@ -3993,6 +4118,30 @@
   url       = {http://web.stanford.edu/~jugander/NetworksNIPS2015/papers/NIPS_Networks_2015_paper_15.pdf},
 }
 
+@InProceedings{Santos2009,
+  author    = {Santos, J. M. and Embrechts, M.},
+  title     = {On the Use of the Adjusted Rand Index as a Metric for Evaluating Supervised Classification},
+  booktitle = {International Conference on Artificial Neural Networks},
+  year      = {2009},
+  pages     = {175-184},
+  doi       = {10.1007/978-3-642-04277-5_18},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
+@InProceedings{Saporta2002,
+  author    = {Saporta, G. and Youness, G.},
+  title     = {Comparing Two Partitions: Some Proposals and Experiments},
+  booktitle = {Compstat},
+  year      = {2002},
+  pages     = {243-248},
+  doi       = {10.1007/978-3-642-57489-4_33},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @Article{Schwartz2010,
   author    = {Schwartz, T.},
   title     = {The friend of my enemy is my enemy, the enemy of my enemy is my friend: Axioms for structural balance and bipolarity},
@@ -4017,7 +4166,7 @@
   __markedentry = {[Vincent:]},
   file          = {:Semantic Word Clusters Using Signed Normalized Graph Cuts.pdf:PDF},
   groups        = {Graph Partitioning, Not Found},
-  journaltitle  = {arXiv},
+  journal  = {arXiv},
   owner         = {Vincent},
   timestamp     = {2017.05.10},
   url           = {https://arxiv.org/abs/1601.05403},
@@ -4313,10 +4462,24 @@
   doi          = {10.1073/pnas.1018901108},
   file         = {:Local balancing influences global structure in social networks.pdf:PDF},
   groups       = {Just balance, Ignored},
-  issue        = {5},
-  journaltitle = {Proceedings of the National Academy of Science},
+  number       = {5},
+  journal = {Proceedings of the National Academy of Science},
   owner        = {Vincent},
   timestamp    = {2017.04.09},
+}
+
+@Article{Steinley2004,
+  author    = {Steinley, D.},
+  title     = {Properties of the Hubert-Arable Adjusted Rand Index.},
+  journal   = {Psychological Methods},
+  year      = {2004},
+  volume    = {9},
+  number    = {3},
+  pages     = {386-396},
+  doi       = {10.1037/1082-989x.9.3.386},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @Article{Sun2013a,
@@ -4637,6 +4800,17 @@
   timestamp = {2017.06.27},
 }
 
+@InProceedings{Tsourakakis2009,
+  author    = {Tsourakakis, C. and Drineas, P. and Michelakis, E. and Koutis, I. and Faloutsos, C.},
+  title     = {Spectral Counting of Triangles in Power-Law Networks via Element-Wise Sparsification},
+  booktitle = {International Conference on Advances in Social Network Analysis and Mining},
+  year      = {2009},
+  doi       = {10.1109/asonam.2009.32},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
 @InProceedings{Tyler2003,
   author    = {Tyler, J. R. and Wilkinson, D. M. and Huberman, B. A.},
   title     = {Email as spectroscopy: Automated discovery of community structure within organizations},
@@ -4750,6 +4924,34 @@
   groups        = {Graph Partitioning, Ignored},
   owner         = {Vincent},
   timestamp     = {2017.06.21},
+}
+
+@Article{Ward1963,
+  author    = {Ward, J. H.},
+  title     = {Hierarchical Grouping to Optimize an Objective Function},
+  journal   = {Journal of the American Statistical Association},
+  year      = {1963},
+  volume    = {58},
+  number    = {301},
+  pages     = {236-244},
+  doi       = {10.1080/01621459.1963.10500845},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
+}
+
+@Article{Warrens2008,
+  author    = {Warrens, M. J.},
+  title     = {On the Equivalence of Cohen's Kappa and the Hubert-Arabie Adjusted Rand Index},
+  journal   = {Journal of Classification},
+  year      = {2008},
+  volume    = {25},
+  number    = {2},
+  pages     = {177-183},
+  doi       = {10.1007/s00357-008-9023-7},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.06.28},
 }
 
 @InProceedings{West2014,
